Prueba indice multiidioma

--- a/src/pages/en/en-index.html
+++ b/src/pages/en/en-index.html
@@ -20,17 +20,17 @@
         <div class="nav-brand">
             <a href="index.html" class="brand-link">
                 <h1>Cristina Fuentes</h1>
-                <img src="assets/icons/es-variant.svg" alt="Español" class="language-flag">
+                <img src="assets/icons/gb.svg" alt="English" class="language-flag">
             </a>
         </div>
 
         <!-- Menú principal -->
         <ul class="nav-menu">
-            <li><a href="src/pages/es/index.html" aria-current="page">Inicio</a></li>
-            <li><a href="src/pages/es/about.html">Sobre mí</a></li>
-            <li><a href="src/pages/es/projects.html">Proyectos</a></li>
-            <li><a href="src/pages/es/devlog.html">Devlog</a></li>
-            <li><a href="src/pages/es/contact.html">Contacto</a></li>
+            <li><a href="index.html" aria-current="page">Inicio</a></li>
+            <li><a href="about.html">Sobre mí</a></li>
+            <li><a href="projects.html">Proyectos</a></li>
+            <li><a href="devlog.html">Devlog</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
 
         <!-- Controles: Idioma, Tema, Accesibilidad, Menú Hamburguesa -->
@@ -46,19 +46,19 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="language-toggle">
                     <li>
-                        <a href="src/pages/es/index.html" class="dropdown-item active" data-lang="es">
+                        <a href="index.html" class="dropdown-item active" data-lang="es">
                             <img src="assets/icons/es-variant.svg" alt="Español" class="flag-icon">
                             Español
                         </a>
                     </li>
                     <li>
-                        <a href="src/pages/en/en-index.html" class="dropdown-item" data-lang="en">
+                        <a href="en/index.html" class="dropdown-item" data-lang="en">
                             <img src="assets/icons/gb.svg" alt="English" class="flag-icon">
                             English
                         </a>
                     </li>
                     <li>
-                        <a href="src/pages/fr/fr-index.html" class="dropdown-item" data-lang="fr">
+                        <a href="fr/index.html" class="dropdown-item" data-lang="fr">
                             <img src="assets/icons/fr.svg" alt="Français" class="flag-icon">
                             Français
                         </a>
