--- a/src/pages/en/en-index.html
+++ b/src/pages/en/en-index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+<!-- Skip Link mejorado -->
+<a href="#main-content" class="skip-link">
+    <span class="skip-icon">⚡</span>
+    Saltar al contenido principal
+</a>
+
 <!-- Navegación Mejorada -->
 <nav class="navbar" aria-label="Navegación principal">
     <div class="nav-container">
-        <a href="#main-content" class="skip-link">
-            <span class="skip-icon">⚡</span>
-            Saltar al contenido principal
-        </a>
-
-        <!-- Branding con bandera -->
+                <!-- Branding con bandera -->
         <div class="nav-brand">
             <a href="index.html" class="brand-link">
                 <h1>Cristina Fuentes</h1>
