--- a/index.html
+++ b/index.html
@@ -125,14 +125,10 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" id="motion-intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
-                            <input type="range" min="0" max="4" value="0" class="intensity-slider" id="motion-intensity">
-                            <span class="intensity-value">0</span>
-                        </div>
-                        <div class="intensity-labels">
-                            <span class="intensity-label min">Normal</span>
-                            <span class="intensity-label max">Máximo</span>
+                            <input type="range" min="1" max="4" value="1" class="intensity-slider" id="motion-intensity">
+                            <span class="intensity-value">1</span>
                         </div>
                     </li>
 
@@ -145,7 +141,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="dyslexia-intensity">
                             <span class="intensity-value">3</span>
@@ -161,7 +157,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="reading-intensity">
                             <span class="intensity-value">3</span>
@@ -177,7 +173,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="photophobia-intensity">
                             <span class="intensity-value">3</span>
@@ -193,7 +189,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Tamaño:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="font-size">
                             <span class="intensity-value">3</span>
@@ -284,6 +280,7 @@
 <script src="assets/js/dropdowns.js"></script>
 <script src="assets/js/theme-manager.js"></script>
 <script src="assets/js/accessibility.js"></script>
+<script src="assets/js/footer.js"></script>
 <script src="assets/js/particles.js"></script>
 </body>
 </html>
